--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
   <p id="text28"><strong>Honey</strong></p>
   <p id="text29"><span>Who doesn't love saving money? Couponcodes are an awesome way of saving money while shopping online, but
     browsing for these coupons is a hassle. There's no need for dealing with the headache of looking for coupons anymore, let
-    honey do that for you.</span><br>
+    honey do that for you.</span><br><br>
     <span> For *free*, add honey to your browser and let it automatically search for and apply coupons when you 
       shop online, showing you the best deals and offers for the items in your cart. Make saving money simple and hassle free with Honey.</span></p>
   <ul id="buttons06" class="buttons">
@@ -239,8 +239,9 @@
   <p id="text28"><strong>Skillshare</strong></p>
   <p id="text29"><span>Skillshare is an online learning community with thousands of classes for creative and curious people, 
     on topics including illustration, design, photography, video, freelancing, and more. On Skillshare, millions of members come 
-    together to find inspiration and take the next step in their creative journey..</span><br> <br>
-    <span> Sign up using my link and get one month <u>free skillshare subscription</u> today and learn a new skill and showcase it to the world!</span></p>
+    together to find inspiration and take the next step in their creative journey.</span><br> <br>
+    <span> Sign up using my link and get one month <u>free skillshare subscription</u> today and learn a new skill and showcase it to the world!
+    Discover your passion with skillshare.</span></p>
   <ul id="buttons06" class="buttons">
     <li><a href="#" class="button n01">Join Free Now</a></li>
   </ul>
