--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
 <section id="shop-section" class="inactive" style="display: none;">
   <h2 id="text26"><strong>Shop from my stores</strong></h2>
-  <h2 style="font-family:'Poppins'; text-align:center; color:#C9EEB3;">International</h2>
+  <h2 style="font-family:'Poppins'; text-align:center; color:#C9EEB3;"><strong>International</strong></h2>
     <br>
   <p id="text28"><strong>Redbubble</strong>
   </p><p id="text29"><span> Check out my Redbubble store for stickers, bags, pouches, phone cases, clothes, birthday cards, pins, 
@@ -162,7 +162,9 @@
     for yourself or gift it to your friend, there's something that's perfect just for you and your loved ones</span><br> 
   </p>
   <ul id="buttons06" class="buttons"><li><a href="https://anoushka.creator-spring.com" class="button n01">ViralStyle</a></li></ul>
-  <h2 style="font-family:'Poppins'; text-align:center; color:#C9EEB3;">India</h2>
+  <br>
+    <h2 id="text26"><strong>Shop from my stores</strong></h2>
+  <h2 style="font-family:'Poppins'; text-align:center; color:#C9EEB3;"><strong>India</strong></h2>
     <br>
    <p id="text28"><strong>FranklyWearing</strong>
   </p><p id="text29"><span> Check out my FranklyWearing store for hoodies, sweatshirts, shirts, bags etc. ! 
