--- a/index.html
+++ b/index.html
@@ -101,8 +101,9 @@
 </section>
 
 <section id="shop-section" class="inactive" style="display: none;">
+  <br>
   <h2 id="text26"><strong>Shop from my stores</strong></h2>
-  <h2 style="font-family:'Poppins'; text-align:center; color:#C9EEB3;"><strong>International</strong></h2>
+  <h2 style="font-family:'Poppins'; text-align:center; color:#C9EEB3;"><strong>Internationally available</strong></h2>
     <br>
   <p id="text28"><strong>Redbubble</strong>
   </p><p id="text29"><span> Check out my Redbubble store for stickers, bags, pouches, phone cases, clothes, birthday cards, pins, 
@@ -164,7 +165,7 @@
   <ul id="buttons06" class="buttons"><li><a href="https://anoushka.creator-spring.com" class="button n01">ViralStyle</a></li></ul>
   <br>
     <h2 id="text26"><strong>Shop from my stores</strong></h2>
-  <h2 style="font-family:'Poppins'; text-align:center; color:#C9EEB3;"><strong>India</strong></h2>
+  <h2 style="font-family:'Poppins'; text-align:center; color:#C9EEB3;"><strong>India Based</strong></h2>
     <br>
    <p id="text28"><strong>FranklyWearing</strong>
   </p><p id="text29"><span> Check out my FranklyWearing store for hoodies, sweatshirts, shirts, bags etc. ! 
