--- a/page2.html
+++ b/page2.html
@@ -52,6 +52,8 @@
   am a feminist who advocates for Mental Health especially in Children and young adults. I'm the founder of the Non Profit Organisations: 
   <a href="http://theraprize.netlify.app">Theraprize</a> and <a href="http://grocereein.netlify.app">Groceree</a> and I also conduct various 
   fundraiser events and campaigns on a very regular basis.</span><br></p> -->
+  <div style="justify-content:center; display: flex;
+  align-items: center;">
   <button class="button" id="mainbutton" style="background-color: #8BABCB;
   font-family: 'Poppins';
   border: none;
@@ -63,6 +65,7 @@
   font-size: 16px;
   margin: 4px 2px;
   cursor: pointer;">Button</button>
+  </div>
   
 </section>
   
