--- a/page2.html
+++ b/page2.html
@@ -58,7 +58,7 @@
   font-family: 'Poppins';
   border: none;
   color: white;
-  padding: 15px 32px;
+  padding: 2% 40%;;
   text-align: center;
   text-decoration: none;
   display: inline-block;
