--- a/page2.html
+++ b/page2.html
@@ -40,6 +40,15 @@
 </header>
 
 <section id="home-section" class="active"><p id="text10"><strong>About</strong></p><p id="text07">
+  <br>
+  <div style="justify-content:center; display: flex;
+  align-items: center;">
+  <button class="button" id="mainbutton" style="background-color: #8BABCB; font-family: 'Poppins';border: none; color: white; padding: 2% 40%; text-align: center; 
+                                                text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer;">Link
+  </button>
+  </div>
+  
+</section>
   
 <!--   <span>Hello! I am Anoushka. I'm 15 years old and I'm in 11th grade studying STEM subjects. I'm a Kathak Dancer and have been dancing since 
     I was 3 and have a national level diploma in Kathak Dance.</span><br> <br> <span>I'm also a singer and have been doing Indian Classical 
@@ -52,23 +61,7 @@
   am a feminist who advocates for Mental Health especially in Children and young adults. I'm the founder of the Non Profit Organisations: 
   <a href="http://theraprize.netlify.app">Theraprize</a> and <a href="http://grocereein.netlify.app">Groceree</a> and I also conduct various 
   fundraiser events and campaigns on a very regular basis.</span><br></p> -->
-  <div style="justify-content:center; display: flex;
-  align-items: center;">
-  <button class="button" id="mainbutton" style="background-color: #8BABCB;
-  font-family: 'Poppins';
-  border: none;
-  color: white;
-  padding: 2% 40%;;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;">Button</button>
-  </div>
-  
-</section>
-  
+
   <section id="one-section" class="inactive" style="display: none;"><h2 id="text16">
     <strong>Download my apps</strong></h2>
     <img src="android.jpg" alt="" style="text-align:center; width:200px;height:200px;">
