--- a/page2.html
+++ b/page2.html
@@ -39,12 +39,14 @@
   </div></div>
 </header>
 
-<section id="home-section" class="active"><p id="text10"><strong>About</strong></p><p id="text07">
-  <br>
-  <div style="justify-content:center; display: flex;
-  align-items: center;">
+<section id="home-section" class="active"><p id="text10">
+<div style="justify-content:center; display: flex;
+  align-items: center;"> 
+<strong>Social Media</strong></p><p id="text07"> <br>
   <button class="button" id="mainbutton" style="background-color: #8BABCB; font-family: 'Poppins';border: none; color: white; padding: 2% 40%; text-align: center; 
-                                                text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer;">Link
+                                                text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer;">Instagram
+  </button>
+  <button class="button" id="mainbutton" style="">Twitter
   </button>
   </div>
   
