--- a/page2.html
+++ b/page2.html
@@ -40,9 +40,9 @@
 </header>
 
 <section id="home-section" class="active">
-<div style="justify-content:center; display: flex;
-  align-items: center;"> 
-<p id="text10"><strong>Social Media</strong></p><p id="text07"> <br>
+<div style="justify-content:center; display: flex; align-items: center;"> 
+  <p id="text10"><strong>Social Media</strong></p><p id="text07"> <br> </div>
+  <div style="justify-content:center; display: flex; align-items: center;"> 
   <button class="button" id="mainbutton" style="background-color: #8BABCB; font-family: 'Poppins';border: none; color: white; padding: 2% 40%; text-align: center; 
                                                 text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer;">Instagram
   </button>
