--- a/page2.html
+++ b/page2.html
@@ -45,7 +45,7 @@
   <div style="justify-content:center; display: flex; align-items: center;"> 
   <button class="button" id="mainbutton" style="background-color: #8BABCB; font-family: 'Poppins';border: none; color: white; padding: 2% 40%; text-align: center; 
                                                 text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer;">Instagram
-  </button>
+  </button><br>
   <button class="button" id="mainbutton" style="background-color: #8BABCB; font-family: 'Poppins';border: none; color: white; padding: 2% 40%; text-align: center; 
                                                 text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer;">Twitter
   </button>
