--- a/page2.html
+++ b/page2.html
@@ -43,12 +43,12 @@
 <div style="justify-content:center; display: flex; align-items: center;"> 
   <p id="text10"><strong>Social Media</strong></p><p id="text07"> <br> </div>
   <div style="justify-content:center; display: flex; align-items: center;"> 
-  <button class="button" id="mainbutton" style="background-color: #8BABCB; font-family: 'Poppins';border: none; color: white; padding: 2% 40px; text-align: center; 
-                                                text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer;">Instagram
+  <button class="button" id="mainbutton" style="background-color: #8BABCB; font-family: 'Poppins';border: none; color: white; padding: 2% 40%; text-align: center; 
+                                                text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer; width: 100px">Instagram
     </button></div>
    <div style="justify-content:center; display: flex; align-items: center;"> 
-  <button class="button" id="mainbutton" style="background-color: #8BABCB; font-family: 'Poppins';border: none; color: white; padding: 2% 40px; text-align: center; 
-                                                text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer;">Twitter
+  <button class="button" id="mainbutton" style="background-color: #8BABCB; font-family: 'Poppins';border: none; color: white; padding: 2% 40%; text-align: center; 
+                                                text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer; width: 100px">Twitter
   </button>
   </div>
   
