--- a/page2.html
+++ b/page2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Anoushka</title>
+<title>noonoushka</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
 <meta name="description" content="Hi"><meta property="og:site_name" content="Anoushka">
