--- a/index.html
+++ b/index.html
@@ -183,8 +183,52 @@
 </section>
 
 <section id="four-section" class="inactive" style="display: none;">
-    <h2 id="text27"><strong>Play my simple games</strong></h2><ul id="buttons07" class="buttons"><li><a href="#" class="button n01">Redbubble</a></li>
-  </ul></section><section id="five-section" class="inactive" style="display: none;">
+  <br>
+    <h2 id="text27"><strong>Play my simple games</strong></h2>
+   <p id="text28"><strong>Block Game</strong>
+  </p><p id="text29"><span> Check out my FranklyWearing store for hoodies, sweatshirts, shirts, bags etc. ! 
+  With over 50 unique products on my store, there's a wide variety to choose from. 
+  You can customise the color combinations of any existing design or send me an email if you want a custom 
+  design made just for you! <br> <br>
+  </p>
+  <ul id="buttons07" class="buttons"><li><a href="#" class="button n01">Play now</a></li>
+  </ul>
+   <p id="text28"><strong>Survival Game</strong>
+  </p><p id="text29"><span> Check out my FranklyWearing store for hoodies, sweatshirts, shirts, bags etc. ! 
+  With over 50 unique products on my store, there's a wide variety to choose from. 
+  You can customise the color combinations of any existing design or send me an email if you want a custom 
+  design made just for you! <br> <br>
+  </p>
+  <ul id="buttons07" class="buttons"><li><a href="#" class="button n01">Play now</a></li>
+  </ul>
+   <p id="text28"><strong>Hangman Game</strong>
+  </p><p id="text29"><span> Check out my FranklyWearing store for hoodies, sweatshirts, shirts, bags etc. ! 
+  With over 50 unique products on my store, there's a wide variety to choose from. 
+  You can customise the color combinations of any existing design or send me an email if you want a custom 
+  design made just for you! <br> <br>
+  </p>
+  <ul id="buttons07" class="buttons"><li><a href="#" class="button n01">Play now</a></li>
+  </ul>
+   <p id="text28"><strong>Tic Tac Toe Game</strong>
+  </p><p id="text29"><span> Check out my FranklyWearing store for hoodies, sweatshirts, shirts, bags etc. ! 
+  With over 50 unique products on my store, there's a wide variety to choose from. 
+  You can customise the color combinations of any existing design or send me an email if you want a custom 
+  design made just for you! <br> <br>
+  </p>
+  <ul id="buttons07" class="buttons"><li><a href="#" class="button n01">Play now</a></li>
+  </ul>
+   <p id="text28"><strong>Snake Game</strong>
+  </p><p id="text29"><span> Check out my FranklyWearing store for hoodies, sweatshirts, shirts, bags etc. ! 
+  With over 50 unique products on my store, there's a wide variety to choose from. 
+  You can customise the color combinations of any existing design or send me an email if you want a custom 
+  design made just for you! <br> <br>
+  </p>
+  <ul id="buttons07" class="buttons"><li><a href="#" class="button n01">Play now</a></li>
+  </ul>
+
+</section>
+
+<section id="five-section" class="inactive" style="display: none;">
   <h2 id="text11"><strong>Non Profit Organisations</strong></h2>
   <img src="theraprize.png" alt="theraprize logo" style="text-align:center; width:150px;height:150px;" href="theraprize.netlify.app">
   <p id="text01"><strong>Theraprize</strong></p>
