--- a/index.html
+++ b/index.html
@@ -224,6 +224,13 @@
   design made just for you! <br> <br>
   </p>
   <ul id="buttons07" class="buttons"><li><a href="#" class="button n01">Play now</a></li>
+    <p id="text28"><strong>Sodoku Solver</strong>
+  </p><p id="text29"><span> Check out my FranklyWearing store for hoodies, sweatshirts, shirts, bags etc. ! 
+  With over 50 unique products on my store, there's a wide variety to choose from. 
+  You can customise the color combinations of any existing design or send me an email if you want a custom 
+  design made just for you! <br> <br>
+  </p>
+  <ul id="buttons07" class="buttons"><li><a href="#" class="button n01">Play now</a></li>
   </ul>
 
 </section>
