--- a/index.html
+++ b/index.html
@@ -201,6 +201,14 @@
   </p>
   <ul id="buttons07" class="buttons"><li><a href="#" class="button n01">Play now</a></li>
   </ul>
+      <p id="text28"><strong>My Own Minecraft</strong>
+  </p><p id="text29"><span> Check out my FranklyWearing store for hoodies, sweatshirts, shirts, bags etc. ! 
+  With over 50 unique products on my store, there's a wide variety to choose from. 
+  You can customise the color combinations of any existing design or send me an email if you want a custom 
+  design made just for you! <br> <br>
+  </p>
+  <ul id="buttons07" class="buttons"><li><a href="#" class="button n01">Play now</a></li> 
+  </ul>
    <p id="text28"><strong>Hangman Game</strong>
   </p><p id="text29"><span> Check out my FranklyWearing store for hoodies, sweatshirts, shirts, bags etc. ! 
   With over 50 unique products on my store, there's a wide variety to choose from. 
@@ -232,7 +240,22 @@
   </p>
   <ul id="buttons07" class="buttons"><li><a href="#" class="button n01">Play now</a></li>
   </ul>
-
+    <p id="text28"><strong>Rock Paper Scissors</strong>
+  </p><p id="text29"><span> Check out my FranklyWearing store for hoodies, sweatshirts, shirts, bags etc. ! 
+  With over 50 unique products on my store, there's a wide variety to choose from. 
+  You can customise the color combinations of any existing design or send me an email if you want a custom 
+  design made just for you! <br> <br>
+  </p>
+  <ul id="buttons07" class="buttons"><li><a href="#" class="button n01">Play now</a></li>
+  </ul>
+       <p id="text28"><strong>Pong</strong>
+  </p><p id="text29"><span> Check out my FranklyWearing store for hoodies, sweatshirts, shirts, bags etc. ! 
+  With over 50 unique products on my store, there's a wide variety to choose from. 
+  You can customise the color combinations of any existing design or send me an email if you want a custom 
+  design made just for you! <br> <br>
+  </p>
+  <ul id="buttons07" class="buttons"><li><a href="#" class="button n01">Play now</a></li>
+  </ul>
 </section>
 
 <section id="five-section" class="inactive" style="display: none;">
