--- a/games.html
+++ b/games.html
@@ -42,7 +42,8 @@
 
 <section id="home-section" class="active">
 <div style="justify-content:center; display: flex; align-items: center;"> 
-  <p id="text10"><strong>Play these games</strong></p>
+  <p id="text10"><strong>Play these games</strong></p> </div>
+  <div style="justify-content:center; display: flex; align-items: center;"> 
   <p id="text07"><span>Hello! I am Anoushka. I'm a 15 years old full stack web developer and I've put together
     a collection of the few games I have created along this wonderful journey of coding in the past few years. Looking Forward to your 
     feedbacks which can be <a href=mailto:nushblogs@gmail.com>emailed</a> to me. Constructive criticism is appreciated !</span> <br> </div>
