--- a/games.html
+++ b/games.html
@@ -51,6 +51,66 @@
   <button class="button" id="mainbutton" style="background-color: #8BABCB; font-family: 'Poppins';border: none; color: white; padding: 2% 40%; text-align: center; 
                                                 text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer; ">Quiz
     </button></div>
+  <div style="justify-content:center; display: flex; align-items: center;"> 
+  <button class="button" id="mainbutton" style="background-color: #8BABCB; font-family: 'Poppins';border: none; color: white; padding: 2% 40%; text-align: center; 
+                                                text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer; ">Quiz
+    </button></div>
+  <div style="justify-content:center; display: flex; align-items: center;"> 
+  <button class="button" id="mainbutton" style="background-color: #8BABCB; font-family: 'Poppins';border: none; color: white; padding: 2% 40%; text-align: center; 
+                                                text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer; ">Quiz
+    </button></div>
+  <div style="justify-content:center; display: flex; align-items: center;"> 
+  <button class="button" id="mainbutton" style="background-color: #8BABCB; font-family: 'Poppins';border: none; color: white; padding: 2% 40%; text-align: center; 
+                                                text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer; ">Quiz
+    </button></div>
+  <div style="justify-content:center; display: flex; align-items: center;"> 
+  <button class="button" id="mainbutton" style="background-color: #8BABCB; font-family: 'Poppins';border: none; color: white; padding: 2% 40%; text-align: center; 
+                                                text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer; ">Quiz
+    </button></div>
+  <div style="justify-content:center; display: flex; align-items: center;"> 
+  <button class="button" id="mainbutton" style="background-color: #8BABCB; font-family: 'Poppins';border: none; color: white; padding: 2% 40%; text-align: center; 
+                                                text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer; ">Quiz
+    </button></div>
+  <div style="justify-content:center; display: flex; align-items: center;"> 
+  <button class="button" id="mainbutton" style="background-color: #8BABCB; font-family: 'Poppins';border: none; color: white; padding: 2% 40%; text-align: center; 
+                                                text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer; ">Quiz
+    </button></div>
+  <div style="justify-content:center; display: flex; align-items: center;"> 
+  <button class="button" id="mainbutton" style="background-color: #8BABCB; font-family: 'Poppins';border: none; color: white; padding: 2% 40%; text-align: center; 
+                                                text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer; ">Quiz
+    </button></div>
+  <div style="justify-content:center; display: flex; align-items: center;"> 
+  <button class="button" id="mainbutton" style="background-color: #8BABCB; font-family: 'Poppins';border: none; color: white; padding: 2% 40%; text-align: center; 
+                                                text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer; ">Quiz
+    </button></div>
+  <div style="justify-content:center; display: flex; align-items: center;"> 
+  <button class="button" id="mainbutton" style="background-color: #8BABCB; font-family: 'Poppins';border: none; color: white; padding: 2% 40%; text-align: center; 
+                                                text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer; ">Quiz
+    </button></div>
+  <div style="justify-content:center; display: flex; align-items: center;"> 
+  <button class="button" id="mainbutton" style="background-color: #8BABCB; font-family: 'Poppins';border: none; color: white; padding: 2% 40%; text-align: center; 
+                                                text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer; ">Quiz
+    </button></div>
+  <div style="justify-content:center; display: flex; align-items: center;"> 
+  <button class="button" id="mainbutton" style="background-color: #8BABCB; font-family: 'Poppins';border: none; color: white; padding: 2% 40%; text-align: center; 
+                                                text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer; ">Quiz
+    </button></div>
+  <div style="justify-content:center; display: flex; align-items: center;"> 
+  <button class="button" id="mainbutton" style="background-color: #8BABCB; font-family: 'Poppins';border: none; color: white; padding: 2% 40%; text-align: center; 
+                                                text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer; ">Quiz
+    </button></div>
+  <div style="justify-content:center; display: flex; align-items: center;"> 
+  <button class="button" id="mainbutton" style="background-color: #8BABCB; font-family: 'Poppins';border: none; color: white; padding: 2% 40%; text-align: center; 
+                                                text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer; ">Quiz
+    </button></div>
+  <div style="justify-content:center; display: flex; align-items: center;"> 
+  <button class="button" id="mainbutton" style="background-color: #8BABCB; font-family: 'Poppins';border: none; color: white; padding: 2% 40%; text-align: center; 
+                                                text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer; ">Quiz
+    </button></div>
+  <div style="justify-content:center; display: flex; align-items: center;"> 
+  <button class="button" id="mainbutton" style="background-color: #8BABCB; font-family: 'Poppins';border: none; color: white; padding: 2% 40%; text-align: center; 
+                                                text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer; ">Quiz
+    </button></div>
    <div style="justify-content:center; display: flex; align-items: center;"> 
   <button class="button" id="mainbutton" style="background-color: #8BABCB; font-family: 'Poppins';border: none; color: white; padding: 2% 40%; text-align: center; 
                                                 text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer;">Twitter
