--- a/games.html
+++ b/games.html
@@ -2,16 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>noonoushka</title>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
-<meta name="description" content="Hi"><meta property="og:site_name" content="Anoushka">
-<meta property="og:title" content="Anoushka"><meta property="og:type" content="website">
-<meta property="og:description" content="Hi">
-<meta property="og:image" content="https://hellobirdie.carrd.co/assets/images/card.jpg?v=e5006343">
-<meta property="og:image:type" content="image/jpeg"><meta property="og:image:width" content="1280">
-<meta property="og:image:height" content="800"><meta property="og:url" content="https://hellobirdie.carrd.co">
-<meta property="twitter:card" content="summary_large_image"><link rel="canonical" href="https://hellobirdie.carrd.co">
+<title>anoushka | games </title>
 <link href="https://fonts.googleapis.com/css?family=Poppins:400,400italic,700,700italic" rel="stylesheet" type="text/css">
 <link rel="shortcut icon" href="67Pg.gif" type="image/gif">
 
@@ -46,19 +37,24 @@
   <div style="justify-content:center; display: flex; align-items: center;"> 
   <p id="text07"><span>Hello! I am Anoushka. I'm a 15 years old full stack web developer and I've put together
     a collection of the few games I have created along this wonderful journey of coding in the past few years. Looking Forward to your 
-    feedbacks which can be <a href=mailto:nushblogs@gmail.com>emailed</a> to me. Constructive criticism is appreciated !</span> <br> </div>
+    feedbacks which can be <a href=mailto:nushblogs@gmail.com>emailed</a> to me. Constructive criticism is appreciated !</span> <br> </div> <br>
   
-  <h2 style="font-family:'Poppins'; text-align:center; color:#C9EEB3;">CSS Buttons</h2>
+  <h2 style="font-family:'Poppins'; text-align:left; color:#C9EEB3;"><strong>CSS Buttons<strong></h2>
+      <p id="text12"><span>Download my very first Android App to take notes and color coordinate them. Along with a beautiful UI design, it supports many older devices 
+      as well and runs on dark mode, giving it a very sleek and matte finish.</span><br> <br> <span>I am yet to upload it on Google Play and hence any 
+      feedback on the application will be much appreciated.</span><br> <span>If you recieve a "unsafe file" notification, please do not worry, it is 
+      absolutely safe and the notification only shows up because it hasn't been published on Google Play yet (something I am working on currently doing).
+      </span><br> <br> <span>You can perform the following functions:</span></p>
   <div style="justify-content:center; display: flex; align-items: center;"> 
-  <button class="button" id="mainbutton" style="background-color: #8BABCB; font-family: 'Poppins';border: none; color: white; padding: 2% 40%; text-align: center; 
-                                                text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer; ">Quiz
+  <button class="button" id="mainbutton" style="background-color: #856289; font-family: 'Poppins';border: none; color: white; padding: 1.5% 40%; text-align: center; 
+                                                text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer; ">Play now
     </button></div>
   <div style="justify-content:center; display: flex; align-items: center;"> 
-  <button class="button" id="mainbutton" style="background-color: #8BABCB; font-family: 'Poppins';border: none; color: white; padding: 2% 40%; text-align: center; 
+  <button class="button" id="mainbutton" style="background-color: #8BABCB; font-family: 'Poppins';border: none; color: white; padding: 1% 40%; text-align: center; 
                                                 text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer; ">Quiz
     </button></div>
    <div style="justify-content:center; display: flex; align-items: center;"> 
-  <button class="button" id="mainbutton" style="background-color: #8BABCB; font-family: 'Poppins';border: none; color: white; padding: 2% 40%; text-align: center; 
+  <button class="button" id="mainbutton" style="background-color: #8BABCB; font-family: 'Poppins';border: none; color: white; padding: 1% 40%; text-align: center; 
                                                 text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer;">Twitter
   </button>
   </div>
