--- a/games.html
+++ b/games.html
@@ -48,10 +48,20 @@
   <button class="button" id="mainbutton" style="background-color: #856289; font-family: 'Poppins';border: none; color: white; padding: 1.5% 40%; text-align: center; 
                                                 text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer; ">Play now
     </button></div>
+     <h2 style="font-family:'Poppins'; text-align:left; color:#C9EEB3;"><strong>CSS Buttons<strong></h2>
+      <p id="text12"><span>Download my very first Android App to take notes and color coordinate them. Along with a beautiful UI design, it supports many older devices 
+      as well and runs on dark mode, giving it a very sleek and matte finish.</span><br> <br> <span>I am yet to upload it on Google Play and hence any 
+      feedback on the application will be much appreciated.</span><br> <span>If you recieve a "unsafe file" notification, please do not worry, it is 
+      absolutely safe and the notification only shows up because it hasn't been published on Google Play yet (something I am working on currently doing).</span></p>
   <div style="justify-content:center; display: flex; align-items: center;"> 
   <button class="button" id="mainbutton" style="background-color: #856289; font-family: 'Poppins';border: none; color: white; padding: 1.5% 40%; text-align: center; 
                                                 text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer; ">Quiz
     </button></div>
+      <h2 style="font-family:'Poppins'; text-align:left; color:#C9EEB3;"><strong>CSS Buttons<strong></h2>
+      <p id="text12"><span>Download my very first Android App to take notes and color coordinate them. Along with a beautiful UI design, it supports many older devices 
+      as well and runs on dark mode, giving it a very sleek and matte finish.</span><br> <br> <span>I am yet to upload it on Google Play and hence any 
+      feedback on the application will be much appreciated.</span><br> <span>If you recieve a "unsafe file" notification, please do not worry, it is 
+      absolutely safe and the notification only shows up because it hasn't been published on Google Play yet (something I am working on currently doing).</span></p>
    <div style="justify-content:center; display: flex; align-items: center;"> 
   <button class="button" id="mainbutton" style="background-color: #856289; font-family: 'Poppins';border: none; color: white; padding: 1.5% 40%; text-align: center; 
                                                 text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px;cursor: pointer;">Twitter
