--- a/games.html
+++ b/games.html
@@ -38,6 +38,8 @@
   <p id="text07"><span>Hello! I am Anoushka. I'm a 15 years old full stack web developer and I've put together
     a collection of the few games I have created along this wonderful journey of coding in the past few years. Looking Forward to your 
     feedbacks which can be <a href=mailto:nushblogs@gmail.com>emailed</a> to me. Constructive criticism is appreciated !</span> <br> </div> <br>
+   
+  <img src=media/img2.gif>
   
   <h2 style="font-family:'Poppins'; text-align:left; color:#C9EEB3;"><strong>CSS Buttons<strong></h2>
       <p id="text12"><span>Download my very first Android App to take notes and color coordinate them. Along with a beautiful UI design, it supports many older devices 
