--- a/games.html
+++ b/games.html
@@ -41,10 +41,10 @@
    
   <div>
   <img src=media/img2.gif><img src=media/img2.gif>
-  </div>
+  </div> <br>
     
     
-  <h2 style="font-family:'Poppins'; text-align:left; color:#C9EEB3;"><strong>CSS Buttons<strong></h2>
+  <h2 style="font-family:'Poppins'; text-align:left; color:#C9EEB3;"><strong>Play Survival Game<strong></h2>
       <p id="text12"><span>Download my very first Android App to take notes and color coordinate them. Along with a beautiful UI design, it supports many older devices 
       as well and runs on dark mode, giving it a very sleek and matte finish.</span></p> <br>
   <div style="justify-content:center; display: flex; align-items: center;">  <br>
