--- a/games.html
+++ b/games.html
@@ -40,7 +40,7 @@
     feedbacks which can be <a href=mailto:nushblogs@gmail.com>emailed</a> to me. Constructive criticism is appreciated !</span> <br> </div> <br>
    
   <div>
-  <img src=media/img2.gif><img src=media/img2.gif>
+  <img src=media/img2.gif><img src=67Pg.gif><img src=media/img2.gif>
   </div> <br>
     
     
