--- a/games.html
+++ b/games.html
@@ -39,8 +39,12 @@
     a collection of the few games I have created along this wonderful journey of coding in the past few years. Looking Forward to your 
     feedbacks which can be <a href=mailto:nushblogs@gmail.com>emailed</a> to me. Constructive criticism is appreciated !</span> <br> </div> <br>
    
-  <div>
+<!--   <div>
   <img src=media/img2.gif><img src=67Pg.gif><img src=media/img2.gif>
+  </div> <br> -->
+  
+   <div>
+  <img src=67Pg.gif> <img src=67Pg.gif> <img src=67Pg.gif> <img src=67Pg.gif> <img src=67Pg.gif> <img src=67Pg.gif> <img src=67Pg.gif>
   </div> <br>
     
     
